cluster-bootstrap/alertmanager-to-github/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alertmanager-to-github
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
