cluster-bootstrap/alertmanager-to-github/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-to-github
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: alertmanager-to-github
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager-to-github
    spec:
      containers:
      - name: alertmanager-to-github
        image: quay.io/ocm-observability/alertmanager-to-github
        version: v2.4
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        imagePullPolicy: Always
        args:
        - start
        - --body-template-file=/conf/body.tmpl
        - --title-template-file=/conf/title.tmpl
        volumeMounts:
        - name: config
          mountPath: /conf/
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: alertmanager-to-github
