cluster-bootstrap/alertmanager-to-github/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager-to-github
spec:
  host: alertmanager-to-github-alertmanager-to-github.apps.demo-aws-495-gjznz.demo.red-chesterfield.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: alertmanager-to-github
    weight: 100
  wildcardPolicy: None
